# greatest-fastapi

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  pytest.ini
.github/workflows/: ci-backend.yaml
app/: __init__.py  alembic.ini  conftest.py  main.py
app/auth/: dependencies.py
app/auth/logics/user/: get_user.py
app/auth/models/: __init__.py  auth0_users.py  social_account.py  user.py  user_profile.py
app/auth/routers/: __init__.py  auth_router.py  oauth2_router.py  user_router.py
app/auth/schemas/: auth_schema.py  user_schema.py
app/auth/tests/factories/: user_factory.py
app/auth/tests/routers/: test_user_router.py
app/auth/types/: auth0.py
app/auth/utils/: jwt.py  password.py  strings.py
app/common/: factory.py
app/common/dependencies/: __init__.py  db.py
app/config/: db.py  local.env  settings.py
app/migrations/: env.py  script.py.mako
app/migrations/versions/: 001_init_.py  002_auth0_user_.py  9cc02effd6f3_.py  e02ec4ece7de_.py
docs/: .env.example
scripts/: dbshell.py
scripts/seed_data/: main.py  seed_auth.py
