[project]
name = "practical-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.3",
    "fastapi>=0.115.0",
    "pydantic-settings>=2.5.2",
    "sqlalchemy[postgresql-asyncpg]>=2.0.35",
    "uvicorn>=0.31.0",
]
